# PDF_editor

./: .gitignore  Kunhwa_PDF_Editor_v2.6.spec  Kunhwa_PDF_Editor_v3.1.spec  Kunhwa_PDF_Editor_v3.1_배포용.spec  Kunhwa_PDF_Editor_v3.2.spec  Kunhwa_PDF_Editor_v3.2_보안강화.spec  Kunhwa_PDF_Editor_v3.4.spec  Kunhwa_PDF_Editor_v3.5.spec  Kunhwa_PDF_Editor_v3.6.spec  README.md  kunhwa_pdf_editor_setup.iss  kunhwa_pdf_editor_setup_v3.4.iss  kunhwa_pdf_editor_setup_v3.5.iss  kunhwa_pdf_editor_setup_v3.6.iss  pdf_editor_v3.1_멀티창_보안기능변경_2.py  pdf_editor_v3.2.py  pdf_editor_v3.3.py  pyproject.toml  users.json.enc  사용자_설명서.txt  사용자_설명서_v3.1.txt  설치_설명서_v3.2.md
kunhwa_pdf_editor/: __init__.py  __main__.py  app.py  install_shortcut.py
old 파일/: Kunhwa_PDF_Editor.spec  Kunhwa_PDF_Editor_v2.1.spec  Kunhwa_PDF_Editor_v2.2_보안버전.spec  Kunhwa_PDF_Editor_v2.2_인증버전.spec  Kunhwa_PDF_Editor_v2.2_최종보안버전.spec  Kunhwa_PDF_Editor_v2.3_최적화버전.spec  Kunhwa_PDF_Editor_v2.4.spec  Kunhwa_PDF_Editor_v2.7_멀티창_이동버전.spec  pdf_editor - 복사본.py  pdf_editor.py  pdf_editor_v1.1.py  pdf_editor_v2.1.py  pdf_editor_v2.2_특정맥어드레스 실행.py  pdf_editor_v2.3_최적화버전.py  pdf_editor_v2.4_썸네일최적화버전.py  pdf_editor_v2.5_성능최적화버전.py  pdf_editor_v2.6_멀티창_이동버전.py  pdf_editor_v2.7_멀티창_이동버전.py  pdf_editor_v2.8_멀티창_이동버전.py  pdf_editor_v3.0_멀티창_이동버전.py
v3.4/: Run_PDF_Editor.bat  main.py  users.json.enc
v3.4/config/: settings.py
v3.4/core/: auth.py  clipboard.py  pdf_engine.py
v3.4/ui/: main_window.py
v3.5/config/: settings.py
v3.5/ui/: main_window.py
v3.6/: main.py
배포_v3.2_보안강화/: users.json.enc  맥어드레스.xlsx  사용자_설명서_v3.2.txt
(+12 files in other folders)
